(oracles) Twist Logic

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -9654,74 +9654,99 @@
         {{/challengeRank}}
 
         {{#almostCertain}}
+        {{#rollBetween() almostCertain 11 100}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{almostCertain}}</span></td>
-            {{#rollBetween() almostCertain 11 100}}
             <td class="sheet-oracle-table-text"><span>Yes</span></td>
-            {{/rollBetween() almostCertain 11 100}}
-            {{#rollTotal() almostCertain 11}}
-            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-            {{/rollTotal() almostCertain 11}}
-            {{#^rollBetween() almostCertain 11 100}}
-            <td class="sheet-oracle-table-text"><span>No</span></td>
-            {{/^rollBetween() almostCertain 11 100}}
         </tr>
+        {{#rollTotal() almostCertain 11}}
+        <tr>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">An extreme result or twist has occurred.</td>
+        </tr>
+        {{/rollTotal() almostCertain 11}}
+        {{/rollBetween() almostCertain 11 100}}
+        {{#^rollBetween() almostCertain 11 100}}
+        <tr>
+            <td class="sheet-oracle-dice"><span>{{almostCertain}}</span></td>
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+        </tr>
+        {{/^rollBetween() almostCertain 11 100}}
         {{/almostCertain}}
         {{#likely}}
+        {{#rollBetween() likely 26 100}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{likely}}</span></td>
-            {{#rollBetween() likely 26 100}}
             <td class="sheet-oracle-table-text"><span>Yes</span></td>
-            {{/rollBetween() likely 26 100}}
-            {{#rollTotal() likely 26}}
-            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-            {{/rollTotal() likely 26}}
-            {{#^rollBetween() likely 26 100}}
-            <td class="sheet-oracle-table-text"><span>No</span></td>
-            {{/^rollBetween() likely 26 100}}
         </tr>
+        {{#rollTotal() likely 26}}
+        <tr>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">An extreme result or twist has occurred.</td>
+        </tr>
+        {{/rollTotal() likely 26}}
+        {{/rollBetween() likely 26 100}}
+        {{#^rollBetween() likely 26 100}}
+        <tr>
+            <td class="sheet-oracle-dice"><span>{{likely}}</span></td>
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+        </tr>
+        {{/^rollBetween() likely 26 100}}
         {{/likely}}
         {{#fiftyFifty}}
+        {{#rollBetween() fiftyFifty 51 100}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{fiftyFifty}}</span></td>
-            {{#rollBetween() fiftyFifty 51 100}}
             <td class="sheet-oracle-table-text"><span>Yes</span></td>
-            {{/rollBetween() fiftyFifty 51 100}}
-            {{#rollTotal() fiftyFifty 51}}
-            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-            {{/rollTotal() fiftyFifty 51}}
-            {{#^rollBetween() fiftyFifty 51 100}}
-            <td class="sheet-oracle-table-text"><span>No</span></td>
-            {{/^rollBetween() fiftyFifty 51 100}}
         </tr>
+        {{#rollTotal() fiftyFifty 51}}
+        <tr>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">An extreme result or twist has occurred.</td>
+        </tr>
+        {{/rollTotal() fiftyFifty 51}}
+        {{/rollBetween() fiftyFifty 51 100}}
+        {{#^rollBetween() fiftyFifty 51 100}}
+        <tr>
+            <td class="sheet-oracle-dice"><span>{{fiftyFifty}}</span></td>
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+        </tr>
+        {{/^rollBetween() fiftyFifty 51 100}}
         {{/fiftyFifty}}
         {{#unlikely}}
+        {{#rollBetween() unlikely 76 100}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{unlikely}}</span></td>
-            {{#rollBetween() unlikely 76 100}}
             <td class="sheet-oracle-table-text"><span>Yes</span></td>
-            {{#rollTotal() unlikely 76}}
-            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-            {{/rollTotal() unlikely 76}}
-            {{/rollBetween() unlikely 76 100}}
-            {{#^rollBetween() unlikely 76 100}}
-            <td class="sheet-oracle-table-text"><span>No</span></td>
-            {{/^rollBetween() unlikely 76 100}}
         </tr>
+        {{#rollTotal() unlikely 76}}
+        <tr>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">An extreme result or twist has occurred.</td>
+        </tr>
+        {{/rollTotal() unlikely 76}}
+        {{/rollBetween() unlikely 76 100}}
+        {{#^rollBetween() unlikely 76 100}}
+        <tr>
+            <td class="sheet-oracle-dice"><span>{{unlikely}}</span></td>
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+        </tr>
+        {{/^rollBetween() unlikely 76 100}}
         {{/unlikely}}
         {{#smallChance}}
+        {{#rollBetween() smallChance 91 100}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{smallChance}}</span></td>
-            {{#rollBetween() smallChance 91 100}}
             <td class="sheet-oracle-table-text"><span>Yes</span></td>
-            {{/rollBetween() smallChance 91 100}}
-            {{#rollTotal() smallChance 91}}
-            <td colspan="2" class="sheet-subfooter">An extreme result or twist has occurred.</td>
-            {{/rollTotal() smallChance 91}}
-            {{#^rollBetween() smallChance 91 100}}
-            <td class="sheet-oracle-table-text"><span>No</span></td>
-            {{/^rollBetween() smallChance 91 100}}
         </tr>
+        {{#rollTotal() smallChance 91}}
+        <tr>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">An extreme result or twist has occurred.</td>
+        </tr>
+        {{/rollTotal() smallChance 91}}
+        {{/rollBetween() smallChance 91 100}}
+        {{#^rollBetween() smallChance 91 100}}
+        <tr>
+            <td class="sheet-oracle-dice"><span>{{smallChance}}</span></td>
+            <td class="sheet-oracle-table-text"><span>No</span></td>
+        </tr>
+        {{/^rollBetween() smallChance 91 100}}
         {{/smallChance}}
         {{#payThePrice}}
         <tr>
