Removed 'Oracles' from sub groups

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -3697,7 +3697,7 @@
     <div class="sheet-oracle-container">
         <div class="sheet-oracle-column">
             <div class="sheet-oracle-box">
-                <div class="sheet-oracle-title">Plot Oracles</div>
+                <div class="sheet-oracle-title">Plot</div>
                 <div class="sheet-oracle">
                     <div class="sheet-button-container">
                         <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
@@ -3794,7 +3794,7 @@
                 </div>
             </div>
             <div class="sheet-oracle-box">
-                <div class="sheet-oracle-title">Character Oracles</div>
+                <div class="sheet-oracle-title">Character</div>
                 <div class="sheet-oracle">
                     <div class="sheet-button-container">
                         <button type="roll" title="Character Role Oracle" name="rollcharacterroleoracle"
@@ -3856,7 +3856,7 @@
                 </div>
             </div>
             <div class="sheet-oracle-box">
-                <div class="sheet-oracle-title">Moves Oracles</div>
+                <div class="sheet-oracle-title">Moves</div>
                 <div class="sheet-oracle">
                     <div class="sheet-button-container">
                         <button type="roll" title="Pay the Price Oracle" name="rollpaythepriceoracle"
