added fix for missed  }}

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -68,6 +68,10 @@
     value="4" />
 <label class="sheet-page-label" for="page4">Oracles</label>
 
+<input type="radio" class="sheet-pages sheet-page5 sheet-hidden" id="page5" name="attr_pagenumber" title="Page 5"
+    value="5" />
+<label class="sheet-page-label" for="page5">Bonds</label>
+
 <div class="page1tab">
     <hr>
     <table>
@@ -159,31 +163,31 @@
                 <div class="sheet-stats">
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Edge" name="rollEdge"
-                            value="&{template:ironsworn} {{header=@{character_name}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{edge}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{edge}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">EDGE</h3>
                         <input type="text" class="sheet-stats-input" name="attr_edge" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Iron" name="rollIron"
-                            value="&{template:ironsworn} {{header=@{character_name}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{iron}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{iron}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">IRON</h3>
                         <input type="text" class="sheet-stats-input" name="attr_iron" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Heart" name="rollHeart"
-                            value="&{template:ironsworn} {{header=@{character_name}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{heart}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{heart}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">HEART</h3>
                         <input type="text" class="sheet-stats-input" name="attr_heart" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Shadow" name="rollShadow"
-                            value="&{template:ironsworn} {{header=@{character_name}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{shadow}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{shadow}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">SHADOW</h3>
                         <input type="text" class="sheet-stats-input" name="attr_shadow" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Wits" name="rollWits"
-                            value="&{template:ironsworn} {{header=@{character_name}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{wits}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+?{Modifier|0})-(@{momentum})]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{wits}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">WITS</h3>
                         <input type="text" class="sheet-stats-input" name="attr_wits" value="1">
                     </div>
@@ -838,6 +842,43 @@
                                 </td>
                             </tr>
                         </table>
+                        <table width="47%">
+                            <tr>
+                                <td colspan="4">
+                                    <h4 class="sheet-heading-left">Assets</h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td width="10%"><input type="checkbox" name="attr_debilOathbreaker"><span></span>
+                                </td>
+                                <td width="40%">
+                                    <h5>Oathbreaker</h5>
+                                </td>
+                                <td width="10%"><input type="checkbox" name="attr_debilLeech"><span></span>
+                                </td>
+                                <td width="40%">
+                                    <h5>Leech</h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                    <h4 class="sheet-heading-left">OTHER
+                                    </h4>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td width="10%"><input type="checkbox" name="attr_debilOtherA"><span></span>
+                                </td>
+                                <td width="40%">
+                                    <h5>Other</h5>
+                                </td>
+                                <td width="10%"><input type="checkbox" name="attr_debilOtherB"><span></span>
+                                </td>
+                                <td width="40%">
+                                    <h5>Other</h5>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </td>
@@ -1033,7 +1074,7 @@
                         <option value="4">#</option>
                     </select>
                     <button type="roll" title="Conclude your progress" name="rollprogress1"
-                        value="&{template:ironsworn} {{header=@{character_name} Conclude Your Progress}} {{progressname=@{name}} {{progress=[[@{progress-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                        value="&{template:ironsworn} {{header=@{character_name} Conclude Your Progress}} {{progressname=@{name}}} {{progress=[[@{progress-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
                     <input type="text" class="sheet-hidden" name="attr_progress-filled"
                         value="floor((@{progress_one}+@{progress_two}+@{progress_three}+@{progress_four}+@{progress_five}+@{progress_six}+@{progress_seven}+@{progress_eight}+@{progress_nine}+@{progress_ten})/4)"
                         disabled="true">
@@ -6410,6 +6451,16 @@
         </div>
     </div>
 </div>
+<div class="page5tab">
+    <hr>
+    <fieldset class="repeating_bonds">
+        <input class="sheet-border-bottom sheet-bond-name" name="attr_bond-name" placeholder="Bond Name">
+        <div>
+            <h4>Notes:</h4>
+            <textarea></textarea>
+        </div>
+    </fieldset>
+</div>
 <hr>
 <table>
     <tr>
@@ -6613,6 +6664,9 @@
         {{/^rollGreater() action challenge1}}
         {{/^rollTotal() action momentum_cancel}}
         {{/action}}
+        {{#burnMomentum}}
+            <tr><td colspan="2">Momentum has been burned and reset to {{momentumReset}}</td></tr>
+        {{/burnMomentum}}
         {{#vow}}
         <tr>
             <td colspan="2" class="sheet-subheader">{{header}}</td>
@@ -10097,7 +10151,7 @@
 <!-- Sheet workers -->
 <script type="text/worker">
 // Debilities update Momentum MAX and RESET.
-on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEncumbered change:debilMarked change:debilHaunted change:debilMaimed change:debilCorrupted', function() {
+on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEncumbered change:debilMarked change:debilHaunted change:debilMaimed change:debilCorrupted change:debilOathbreaker change:debilLeech change:debilOtherA change:debilOtherB', function() {
     var numDebilities=0
     getAttrs(["debilWounded","debilShaken", "debilUnprepared", "debilEncumbered", "debilMarked", "debilHaunted", "debilMaimed", "debilCorrupted", "momentum_max", "momentum_reset"], function(values) {
         if(values.debilWounded == "on") numDebilities=numDebilities+1;
@@ -10112,7 +10166,6 @@ on('change:debilWounded change:debilShaken change:debilUnprepared change:debilEn
         if (numDebilities===0) setAttrs({ momentum_reset: 2});
         if (numDebilities===1) setAttrs({ momentum_reset: 1});
         if (numDebilities>1) setAttrs({ momentum_reset: 0});
-
     });
 });
 //Cannot increase Health while Wounded
