--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -409,7 +409,7 @@
 						&nbsp;
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Knockdown & Stunning Check - B420}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{knockdown_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[1]]}} {{notes= **On a failure**, you’re **Physically Stunned** (B420). You also fall prone (if you weren’t already), and if you were holding anything, you drop it. \n<br />**On a failure by 5 or more, or any critical failure**, you fall unconscious! B420}}"  name="roll_vsKnockdown" />
+						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{activeDefense=[[0]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Knockdown & Stunning Check - B420}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{knockdown_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[1]]}} {{notes= **On a failure**, you’re **Physically Stunned** (B420). You also fall prone (if you weren’t already), and if you were holding anything, you drop it. \n<br />**On a failure by 5 or more, or any critical failure**, you fall unconscious! B420. For Recovery see B423.}}"  name="roll_vsKnockdown" />
 					</div>
 
 				</div> <!-- .sheet-row -->
