--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -88,6 +88,8 @@
           <h1 class="yellow-header" data-i18n="Skills">Skills</h1>
           <h2 data-i18n="Basic Skills">Basic Skills</h2>
           <div class="skill-column">
+            <h3 data-i18n="Adv"></h3>
+            <h3 data-i18n="Total"></h3>
             <div class="skill">
               <select name="attr_balance_attribute" value="">
                 <option data-i18n="Strength" value="@{strength}">Strength</option>
@@ -274,6 +276,8 @@
             </div>
           </div>
           <div class="skill-column">
+            <h3 data-i18n="Adv"></h3>
+            <h3 data-i18n="Total"></h3>
             <div class="skill">
               <select name="attr_hold_attribute" value="">
                 <option data-i18n="Strength" value="@{strength}">Strength</option>
