start die roller

--- a/Outbreak/OU2_Roll20_charsheet.html
+++ b/Outbreak/OU2_Roll20_charsheet.html
@@ -450,18 +450,22 @@
             <div class="page" style="width: 390px;margin-bottom:8px">
                 <table align="center" width="370px">
                     <tr style="margin-left:8px">
-                        <td colspan="2"><span class="left large">Dice Pool</span><span class="info" title="Dice Pool will be used with all skill rolls. Set to Zero to clear.">i</span></td>
-                        <td colspan="2" class="right small">Roll Pool<button type='roll' name='roll_Pool' value="&{template:ou-small} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}}"></button></td>
+                        <td colspan="2">
+                            <span class="left large">Dice Pool</span><span class="info" title="Dice Pool will be used with all skill rolls. Set to Zero to clear.">i</span></td>
+                        <td colspan="2" class="right small">Roll Pool
+                            <button type='roll' name='roll_Pool' value="&{template:ou-small} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}}"></button></td>
                     </tr>
                     <tr class="spacer"><td  style="height: 8px;" colspan="4"></td></tr>
                     <tr>
-                        <td class="center"><img class="dieimg" src="https://i.imgur.com/lum5jcz.jpg" title="Difficulty Dice - Diff dice don't show when rolling on a skill but they are calculated into the roll."><select name="attr_dpDiff" id="diff" style="width:45px">
-                            <option value="[[0d6!p]]">0</option>
-                            <option value="[[1d6!p]]">1</option>
-                            <option value="[[2d6!p]]">2</option>
-                            <option value="[[3d6!p]]">3</option>
-                            <option value="[[4d6!p]]">4</option>
-                            <option value="[[5d6!p]]">5</option>
+                        <td class="center">
+                            <img class="dieimg" src="https://i.imgur.com/lum5jcz.jpg" title="Difficulty Dice - Diff dice don't show when rolling on a skill but they are calculated into the roll.">
+                            <select name="attr_dpDiff" id="diff" style="width:45px">
+                                <option value="[[0d6!p]]">0</option>
+                                <option value="[[1d6!p]]">1</option>
+                                <option value="[[2d6!p]]">2</option>
+                                <option value="[[3d6!p]]">3</option>
+                                <option value="[[4d6!p]]">4</option>
+                                <option value="[[5d6!p]]">5</option>
                             </select>
                         </td>
                         <td class="center"><img class="dieimg" src="https://i.imgur.com/QIhFKV7.jpg" title="Speed Dice"><select name="attr_dpSpeed" style="width:45px">
