--- a/Outbreak/OU2_Roll20_charsheet.html
+++ b/Outbreak/OU2_Roll20_charsheet.html
@@ -497,7 +497,12 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="center"><input type="radio" name="attr_DiffDie" value="[[5d1]]" checked="checked"><span>d5!</span><input type="radio" name="attr_DiffDie" value="[[6d1]]"><span>d6</span></td>
+                        <td class="center">
+                            <input type="radio" name="attr_DiffDie" value="[[5d1]]" checked="checked">
+                            <span>d5!</span>
+                            <input type="radio" name="attr_DiffDie" value="[[6d1]]">
+                            <span>d6</span>
+                        </td>
                         <td class="center"><input type="radio" name="attr_SpeedDie" value="[[5d1]]" checked="checked"><span>d5!</span><input type="radio" name="attr_SpeedDie" value="[[6d1]]"><span>d6</span></td>
                         <td class="center"><input type="radio" name="attr_DmgDie" value="[[5d1]]" checked="checked"><span>d5!</span><input type="radio" name="attr_DmgDie" value="[[6d1]]"><span>d6</span></td>
                         <td class="center"><input type="radio" name="attr_DepletDie" value="[[5d1]]" checked="checked"><span>d5!</span><input type="radio" name="attr_DepletDie" value="[[6d1]]"><span>d6</span></td>
