finished to Psyche

--- a/Outbreak/OU2_Roll20_charsheet.html
+++ b/Outbreak/OU2_Roll20_charsheet.html
@@ -577,7 +577,7 @@
                     </tr>
                     <tr>
                         <td class="center checkg">
-                        <input type="checkbox" name="attr_viral1" value="1" title="Viral Level 1"><span></span>
+                            <input type="checkbox" name="attr_viral1" value="1" title="Viral Level 1"><span></span>
                             <input type="checkbox" name="attr_viral2" title="Viral Level 2"><span></span>
                             <input type="checkbox" name="attr_viral3" title="Viral Level 3"><span></span>
                             <input type="checkbox" name="attr_viral4" title="Viral Level 4"><span></span>
@@ -616,11 +616,14 @@
                     </tr>
                     <tr>
                         <td class="right">Morale:</td>
-                        <td class="center"><input type="number" name="attr_baseMorale" style="width:32px" value="(@{willpower_bonus}+@{empathy_bonus})" disabled="true" /></td>
+                        <td class="center">
+                            <input type="number" name="attr_baseMorale" style="width:32px" value="(@{willpower_bonus}+@{empathy_bonus})" disabled="true" /></td>
                         <td>+</td>
-                        <td class="center"><input type="text" name="attr_bonusMorale" style="width:28px" value="0"/></td>
+                        <td class="center">
+                            <input type="text" name="attr_bonusMorale" style="width:28px" value="0"/></td>
                         <td>=</td>
-                        <td class="center"><input type="text" name="attr_totalMorale" style="width:28px" value="(@{baseMorale}+@{bonusMorale})" disabled="true" /></td>
+                        <td class="center">
+                            <input type="text" name="attr_totalMorale" style="width:28px" value="(@{baseMorale}+@{bonusMorale})" disabled="true" /></td>
                         <td style="width:50px"></td>
                     </tr>
                 </table>
