--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -695,7 +695,7 @@
               </div>
               <div class="row">
                 <h3 data-i18n="Bonus">Bonus</h3>
-                <input name="attr_damage_threshold_bonus" type="number" value=""/>
+                <input name="attr_damage_threshold_bonus" type="number" value="0"/>
               </div>
               <div class="row">
                 <h3 data-i18n="Total">Total</h3>
@@ -704,8 +704,38 @@
             </div>
           </div>
         </div>
-        <h1 class="yellow-header" data-i18n="Viral">Viral</h1>
-        <h1 class="yellow-header" data-i18n="Psyche">Psyche</h1>
+        <div class="grid viral">
+          <h1 class="yellow-header" data-i18n="Viral">Viral</h1>
+          <div class="virus-checkboxes">
+            <input name="attr_viral_1" value="1" type="checkbox"/><span></span>
+            <input name="attr_viral_2" value="2" type="checkbox"/><span></span>
+            <input name="attr_viral_3" value="3" type="checkbox"/><span></span>
+            <input name="attr_viral_4" value="4" type="checkbox"/><span></span>
+            <input name="attr_viral_5" value="5" type="checkbox"/><span></span>
+            <input name="attr_viral_6" value="6" type="checkbox"/><span></span>
+            <input name="attr_viral_7" value="7" type="checkbox"/><span></span>
+            <input name="attr_viral_8" value="8" type="checkbox"/><span></span>
+            <input name="attr_viral_9" value="9" type="checkbox"/><span></span>
+            <input name="attr_viral_10" value="10" type="checkbox"/><span></span>
+          </div>
+          <h2 data-i18n="Symptoms">Symptoms</h2>
+          <textarea name="attr_symptoms"></textarea>
+        </div>
+        <div class="grid pysche">
+          <h1 class="yellow-header" data-i18n="Psyche">Psyche</h1>
+          <h2 data-i18n="Wb + Eb">Wb + Eb</h2>
+          <h2 data-i18n="Bonus">Bonus</h2>
+          <h2 data-i18n="Total">Total</h2>
+          <h2 data-i18n="Morale">Morale</h2>
+          <input name="attr_morale_base" type="number" value="(@{willpower_bonus}+@{empathy_bonus})" disabled="true"/><span>+</span>
+          <input name="attr_morale_bonus" type="number" value="0"/><span>=</span>
+          <input name="attr_morale" type="number" value="(@{morale_base}+@{morale_bonus})" disabled="true"/>
+          <h2 data-i18n="Coping Mechanisms">Coping Mechanisms</h2>
+          <textarea name="attr_coping_mechanisms"></textarea>
+        </div>
+      </div>
+      <div class="grid box training-value">
+        <h1 class="green-header" data-i18n="Training Value Bonus">Training Value Bonus</h1>
       </div>
     </div>
   </div>
