--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8404,7 +8404,26 @@
 			<!-- BEGIN RELEASE NOTES -->
 			<!--                     -->
 			<div class="sheet-release">
-			    <h3 class='subsectionHeader' data-i18n="release-notes">Release Notes</h3>
+				<h3 class='subsectionHeader' data-i18n="release-notes">Release Notes</h3>
+				<!-- Release 3.10 -->
+				<label class="sheet-rowlabel">
+			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes310' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.10</h4></span>
+				</label>
+				<input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes39' value='1' />
+				<div class='sheet-releasenotes'>
+					<p data-i18n="changes-this-release">
+						Changes this release:
+					</p>
+					<ul>
+						 <li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
+						 <ul>
+						 </ul>
+						 <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
+						 <ul>
+							 <li data--i18n="smooth-dice-fix">Added option for dice smoothing, adding 1dF to every roll. This specifically fixes the probability quirk where d4-2 was more likely to succeed against TN 4 than d6-2.</li>
+						 </ul>
+					</ul>
+				 </div>
                 <!-- Release 3.9 -->
                 <label class="sheet-rowlabel">
 			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes39' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.9</h4></span>
